# hello_solana

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
content_platform/: Anchor.toml  package-lock.json
content_platform/programs/content_platform/: Cargo.toml  README.md
content_platform/tests/: content_platform.ts
counter/: Anchor.toml
counter/programs/counter/: Cargo.toml
counter/tests/: counter.ts
decentralized_message_board/: Anchor.toml
decentralized_message_board/tests/: decentralized_message_board.ts
friend/: Cargo.toml
friend/src/: instruction.rs  lib.rs  processor.rs  state.rs
hello_count/: Cargo.toml
hello_count/src/: instruction.rs  processor.rs
iswap/: Anchor.toml  package-lock.json  package.json  pnpm-lock.yaml
iswap/app/: index.ts
iswap/app/api/: address.ts  const.ts  etf_token.ts
iswap/tests/: iswap.ts
mini_nft/: Anchor.toml  package-lock.json
mini_nft/tests/: mini_nft.ts
multi_user_counter/: Anchor.toml
multi_user_counter/tests/: multi_user_counter.ts
score_board/: Cargo.toml  README.md
score_board/src/: instruction.rs  lib.rs  processor.rs
social/: Anchor.toml
social/app/: index.ts
social/tests/: social.ts
sol_ji/: Anchor.toml
sol_ji/app/: draw.ts  index.ts  mint.ts  wish.ts
sol_ji/tests/: sol_ji.ts
sol_native/: Cargo.toml
sol_native/src/: main.rs
todo/: Anchor.toml  package-lock.json
todo/tests/: todo.ts
token/: Cargo.toml
token/src/: instruction.rs  lib.rs  processor.rs
transfer_sol/: Anchor.toml  package-lock.json
transfer_sol/tests/: transfer_sol.ts
(+90 files in other folders)
