[package]
name = "token"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"
spl-associated-token-account = { version = "7.0.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
